workaround for NULL-deref

BUG:203497

svn path=/branches/KDE/4.3/kdeutils/kgpg/; revision=1040127